# einkaufsbot

./: .gitignore  .sops.yaml  README.md  einkaufsbot.py  greedy.py  putzplan.json  putzplan.py  pyproject.toml  secrets.enc.yml  test.py
templates/: badwords.txt  help.txt  payments.txt
