[tool.poetry]
name = "einkaufsbot"
version = "0.1.0"
description = "Einkaufsheini Telegram Bot"
authors = ["David Koch <dvkch@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = {version = "20.7", extras = ["job-queue"]}
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
telethon = "^1.37.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
